ipc/ipdl/test/ipdl/error/compressCtorManagee.ipdl
include protocol compressCtor;

rpc protocol compressCtorManagee {
    manager compressCtor;

child:
    async __delete__() compress;
};
